syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Network Services Protobuf
 * ​
 * Copyright (C) 2018 - 2020 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "Query.proto";
import "Response.proto";
import "TransactionResponse.proto";
import "Transaction.proto";

/* Transactions and queries for the Schedule Service */
service ScheduleService {
  // Creates a new Schedule by submitting the transaction
  rpc createSchedule (Transaction) returns (TransactionResponse);

  // Signs a new Schedule by submitting the transaction
  rpc signSchedule (Transaction) returns (TransactionResponse);

  // Deletes a new Schedule by submitting the transaction
  rpc deleteSchedule (Transaction) returns (TransactionResponse);

  // Retrieves the metadata of a schedule entity
  rpc getScheduleInfo (Query) returns (Response);
}
